==> eddyst/Arduino/projects/History/libraries/RF24/RF24.cpp <==
#include "nRF24L01.h"
#include "RF24_config.h"
#include "RF24.h"

void RF24::csn(bool mode)
{
  // Minimum ideal SPI bus speed is 2x data rate
  // If we assume 2Mbs data rate and 16Mhz clock, a
  // divider of 4 is the minimum we want.
  // CLK:BUS 8Mhz:2Mhz, 16Mhz:4Mhz, or 20Mhz:5Mhz
#ifdef ARDUINO
	#if  ( !defined( __AVR_ATtiny85__ ) && !defined( __AVR_ATtiny84__) && !defined (__arm__)  ) || defined (CORE_TEENSY)
 			SPI.setBitOrder(MSBFIRST);
  			SPI.setDataMode(SPI_MODE0);
			SPI.setClockDivider(SPI_CLOCK_DIV2);
	#endif
#endif

#if !defined  (__arm__) || defined (CORE_TEENSY)
	digitalWrite(csn_pin,mode);
#endif

}

void RF24::ce(bool level)
{
  digitalWrite(ce_pin,level);
}

uint8_t RF24::write_payload(const void* buf, uint8_t data_len, const uint8_t writeType)
{
  uint8_t status;
  const uint8_t* current = reinterpret_cast<const uint8_t*>(buf);

  if(data_len > 32) data_len = 32;
  uint8_t blank_len = dynamic_payloads_enabled ? 0 : 32 - data_len;

  //printf("[Writing %u bytes %u blanks]",data_len,blank_len);

 #if defined (__arm__) && !defined ( CORE_TEENSY )

  status = SPI.transfer(csn_pin, writeType , SPI_CONTINUE);

  if(blank_len){
    while ( data_len--){
      SPI.transfer(csn_pin,*current++, SPI_CONTINUE);
    }
    while ( --blank_len ){
      SPI.transfer(csn_pin,0, SPI_CONTINUE);
    }
    SPI.transfer(csn_pin,0);
  }else{
    while( --data_len ){
      SPI.transfer(csn_pin,*current++, SPI_CONTINUE);
    }
    SPI.transfer(csn_pin,*current);
  }

  #else

  csn(LOW);
  status = SPI.transfer( writeType );
  while ( data_len-- ) {
    SPI.transfer(*current++);
  }
  while ( blank_len-- ) {
    SPI.transfer(0);
  }
  csn(HIGH);

  #endif

  return status;
}

uint8_t RF24::read_payload(void* buf, uint8_t data_len)
{
  uint8_t status;
  uint8_t* current = reinterpret_cast<uint8_t*>(buf);

  if(data_len > payload_size) data_len = payload_size;
  uint8_t blank_len = dynamic_payloads_enabled ? 0 : 32 - data_len;

  //printf("[Reading %u bytes %u blanks]",data_len,blank_len);


  #if defined (__arm__) && !defined ( CORE_TEENSY )

  status = SPI.transfer(csn_pin, R_RX_PAYLOAD, SPI_CONTINUE );

  if( blank_len ){
	while ( data_len-- ){
      *current++ = SPI.transfer(csn_pin,0xFF, SPI_CONTINUE);
	}

	while ( --blank_len ){
	  SPI.transfer(csn_pin,0xFF, SPI_CONTINUE);
	}
	SPI.transfer(csn_pin,0xFF);
  }else{
	while ( --data_len ){
	  *current++ = SPI.transfer(csn_pin,0xFF, SPI_CONTINUE);
	}
	*current = SPI.transfer(csn_pin,0xFF);
  }

  #else

  csn(LOW);
  status = SPI.transfer( R_RX_PAYLOAD );
  while ( data_len-- ) {
    *current++ = SPI.transfer(0xFF);
  }
  while ( blank_len-- ) {
    SPI.transfer(0xff);
  }
  csn(HIGH);

  #endif

  return status;
}

uint8_t RF24::spiTrans(uint8_t cmd){

  uint8_t status;
  #if defined (__arm__) && !defined ( CORE_TEENSY )
	status = SPI.transfer(csn_pin, cmd );
  #else

  csn(LOW);
  status = SPI.transfer( cmd );
  csn(HIGH);
  #endif
  return status;

}

void RF24::begin(void)
{
  // Initialize pins
  pinMode(ce_pin,OUTPUT);

  #if defined(__arm__) && ! defined( CORE_TEENSY )
  	SPI.begin(csn_pin);					// Using the extended SPI features of the DUE
	SPI.setClockDivider(csn_pin, 9);   // Set the bus speed to 8.4mhz on Due
	SPI.setBitOrder(csn_pin,MSBFIRST);	// Set the bit order and mode specific to this device
  	SPI.setDataMode(csn_pin,SPI_MODE0);
	ce(LOW);
  	//csn(HIGH);
  #else
    pinMode(csn_pin,OUTPUT);
    SPI.begin();
    ce(LOW);
  	csn(HIGH);
  #endif

  // Must allow the radio time to settle else configuration bits will not necessarily stick.
  // This is actually only required following power up but some settling time also appears to
  // be required after resets too. For full coverage, we'll always assume the worst.
  // Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
  // Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
  // WARNING: Delay is based on P-variant whereby non-P *may* require different timing.
  delay( 5 ) ;

  // Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
  // WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
  // sizes must never be used. See documentation for a more complete explanation.
  setRetries(5,15);

  // Reset value is MAX
  //setPALevel( RF24_PA_MAX ) ;

  // Determine if this is a p or non-p RF24 module and then
  // reset our data rate back to default value. This works
  // because a non-P variant won't allow the data rate to
  // be set to 250Kbps.
  if( setDataRate( RF24_250KBPS ) )
  {
    p_variant = true ;
  }

  // Then set the data rate to the slowest (and most reliable) speed supported by all
  // hardware.
  setDataRate( RF24_1MBPS ) ;

  // Initialize CRC and request 2-byte (16bit) CRC
  setCRCLength( RF24_CRC_16 ) ;

  // Disable dynamic payloads, to match dynamic_payloads_enabled setting - Reset value is 0
  //write_register(DYNPD,0);

  // Reset current status
  // Notice reset and flush is the last thing we do
  write_register(STATUS,_BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );

  // Set up default configuration.  Callers can always change it later.
  // This channel should be universally safe and not bleed over into adjacent
  // spectrum.
  setChannel(76);

  // Flush buffers
  flush_rx();
  flush_tx();

  powerUp(); //Power up by default when begin() is called

  // Enable PTX, do not write CE high so radio will remain in standby I mode ( 130us max to transition to RX or TX instead of 1500us from powerUp )
  // PTX should use only 22uA of power
  write_register(CONFIG, ( read_register(CONFIG) ) & ~_BV(PRIM_RX) );

}

void SPIClass::begin() {

  digitalWrite(SS, HIGH);
  pinMode(USCK, OUTPUT);
  pinMode(DO, OUTPUT);
  pinMode(SS, OUTPUT);
  pinMode(DI, INPUT);
  USICR = _BV(USIWM0);

}
