==> aguegu/stm8demos/stm8l152c6t6mini/SPI_RF24/RF24.c <==

void csn(bool mode) {
  GPIO_WriteBit(gpio_csn, pin_csn, mode);
}

void ce(bool val) {
	GPIO_WriteBit(pgio_ce, pin_ce, val);
}

u8 write_payload(const void* buf, u8 data_len, const u8 writeType) {
  u8 status, blank_len;
  const u8* current = reinterpret_cast<const u8*>(buf);

  data_len = rf24_min(data_len, payload_size);
  blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

  // IF_SERIAL_DEBUG( printf("[Writing %u bytes %u blanks]\n",data_len,blank_len); );

  beginTransaction();
  status = spi_transfer(writeType);

  spi_transfer_n(current, data_len);
  while (blank_len--) {
    spi_transfer(0);
  }
  endTransaction();

  return status;
}

u8 read_payload(void* buf, u8 data_len) {
  u8 status, blank_len;
  u8* current = reinterpret_cast<u8*>(buf);

  data_len = rf24_min(data_len, payload_size);

  blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

  // IF_SERIAL_DEBUG( printf("[Reading %u bytes %u blanks]\n",data_len,blank_len); );

  beginTransaction();
  status = spi_transfer(R_RX_PAYLOAD);
  while (data_len--) {
    *current++ = spi_transfer(0xFF);
  }
  while (blank_len--) {
    spi_transfer(0xff);
  }
  endTransaction();
  return status;
}

u8 spiTrans(u8 cmd) {
  u8 status;
  beginTransaction();
  status = spi_transfer(cmd);
  endTransaction();
  return status;
}

void begin() {
  u8 setup = 0;

  delay(5) ;

  // Reset NRF_CONFIG and enable 16-bit CRC.
  write_register(NRF_CONFIG, 0x0C) ;

  // Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
  // WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
  // sizes must never be used. See documentation for a more complete explanation.
  setRetries(5, 15);

  // Reset value is MAX
  //setPALevel( RF24_PA_MAX ) ;

  // check for connected module and if this is a p nRF24l01 variant
  //
  if(setDataRate(RF24_250KBPS)) {
    p_variant = true ;
  }

  setup = read_register(RF_SETUP);
  /*if( setup == 0b00001110 )     // register default for nRF24L01P
  {
    p_variant = true ;
  }*/

  // Then set the data rate to the slowest (and most reliable) speed supported by all
  // hardware.
  setDataRate(RF24_1MBPS);

  // Initialize CRC and request 2-byte (16bit) CRC
  //setCRCLength( RF24_CRC_16 ) ;

  // Disable dynamic payloads, to match dynamic_payloads_enabled setting - Reset value is 0
  toggle_features();
  write_register(FEATURE, 0);
  write_register(DYNPD, 0);
  dynamic_payloads_enabled = false;

  // Reset current status
  // Notice reset and flush is the last thing we do
  write_register(NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );

  // Set up default configuration.  Callers can always change it later.
  // This channel should be universally safe and not bleed over into adjacent
  // spectrum.
  setChannel(76);

  // Flush buffers
  flush_rx();
  flush_tx();

  powerUp(); //Power up by default when begin() is called

  // Enable PTX, do not write CE high so radio will remain in standby I mode ( 130us max to transition to RX or TX instead of 1500us from powerUp )
  // PTX should use only 22uA of power
  write_register(NRF_CONFIG, ( read_register(NRF_CONFIG) ) & ~_BV(PRIM_RX) );

  // if setup is 0 or ff then there was no response from module
  return setup != 0 && setup != 0xff;
}
